fix(skin_category): fix skin_category endpoints and json response order
